--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,7 @@
 /tf2
 /backend
 /fitness-app
+/model
 
 # misc
 .DS_Store
@@ -34,3 +35,5 @@ yarn-error.log*
 # native directories
 android/
 ios/
+*.jpg
+*.mp4
